--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ background-size:100%;
 display: flex;
 justify-content: center;
 align-items: center;
+background-color: var(--Paleblue);
 }
 .container{
     height: 100%;
